log
Thu 20 Apr 2023 02:57:36 AM UTC: 
 tests:  1|8
total_score: 0/70
5030089
Thu 20 Apr 2023 04:40:15 PM UTC: 
 treemap.c | 42 ++++++++++++++++++++++++++----------------
 1 file changed, 26 insertions(+), 16 deletions(-)
 tests:  1|8
total_score: 0/70
7bf13bc
Thu 20 Apr 2023 04:49:44 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
28216f3
Thu 20 Apr 2023 04:51:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ea5a8c2
Thu 20 Apr 2023 04:51:55 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
717e8ce
Thu 20 Apr 2023 05:01:24 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:3: error: expected ‘)’ before ‘{’ token
   82 |   {
      |   ^
treemap.c:81:5: note: to match this ‘(’
   81 |   if(tree == NULL
      |     ^
treemap.c:85:1: error: expected expression before ‘}’ token
   85 | }
      | ^
treemap.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b4ff267
Thu 20 Apr 2023 05:01:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:14: error: ‘NUL’ undeclared (first use in this function); did you mean ‘NULL’?
   81 |   if(tree == NUL)
      |              ^~~
      |              NULL
treemap.c:81:14: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f10273f
Thu 20 Apr 2023 05:01:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
   85 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8493157
Thu 20 Apr 2023 05:06:35 PM UTC: 
 treemap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:92:14: error: ‘TreeMap’ has no member named ‘lower_that’; did you mean ‘lower_than’?
   92 |     if(tree->lower_that(tree->current->pair->kay))
      |              ^~~~~~~~~~
      |              lower_than
treemap.c:92:46: error: ‘Pair’ has no member named ‘kay’; did you mean ‘key’?
   92 |     if(tree->lower_that(tree->current->pair->kay))
      |                                              ^~~
      |                                              key
treemap.c:94:13: error: ‘TreeMap’ has no member named ‘curretn’; did you mean ‘current’?
   94 |       tree->curretn = tree->current->right;
      |             ^~~~~~~
      |             current
treemap.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a2e755f
Thu 20 Apr 2023 05:06:41 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:92:14: error: ‘TreeMap’ has no member named ‘lower_that’; did you mean ‘lower_than’?
   92 |     if(tree->lower_that(tree->current->pair->key))
      |              ^~~~~~~~~~
      |              lower_than
treemap.c:94:13: error: ‘TreeMap’ has no member named ‘curretn’; did you mean ‘current’?
   94 |       tree->curretn = tree->current->right;
      |             ^~~~~~~
      |             current
treemap.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ea3f8a7
Thu 20 Apr 2023 05:06:49 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:92:14: error: ‘TreeMap’ has no member named ‘lower_that’; did you mean ‘lower_than’?
   92 |     if(tree->lower_that(tree->current->pair->key))
      |              ^~~~~~~~~~
      |              lower_than
treemap.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
414207d
Thu 20 Apr 2023 05:06:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:92:8: error: too few arguments to function ‘tree->lower_than’
   92 |     if(tree->lower_than(tree->current->pair->key))
      |        ^~~~
treemap.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0c77b54
Thu 20 Apr 2023 05:08:08 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:92:8: error: too few arguments to function ‘tree->lower_than’
   92 |     if(tree->lower_than(tree->current->pair->key))
      |        ^~~~
Compilation failed
c436977
Thu 20 Apr 2023 05:08:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
9b9462d
Thu 20 Apr 2023 05:12:26 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:55:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   55 |     return NULL;
      |            ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value)
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c9f9c4b
Thu 20 Apr 2023 05:12:52 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
9279098
Thu 20 Apr 2023 05:16:08 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
bbd815c
Thu 20 Apr 2023 05:30:06 PM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++--
 1 file changed, 27 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:19: error: ‘trre’ undeclared (first use in this function); did you mean ‘tree’?
   53 |   tree->current = trre->root;
      |                   ^~~~
      |                   tree
treemap.c:53:19: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:58:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   58 |     return NULL;
      |            ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value)
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7fec00a
Thu 20 Apr 2023 05:31:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   58 |     return NULL;
      |            ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value)
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ed4f7d
Thu 20 Apr 2023 05:31:12 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
c639af4
Thu 20 Apr 2023 05:31:48 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
ce993d8
Thu 20 Apr 2023 05:33:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
863d2b4
Thu 20 Apr 2023 05:34:21 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
10af528
Thu 20 Apr 2023 05:42:59 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:21: error: ‘new’ undeclared (first use in this function)
   57 |     tree->current = new;
      |                     ^~~
treemap.c:57:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
eeedb00
Thu 20 Apr 2023 05:43:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
792d80e
Fri 21 Apr 2023 11:18:03 PM UTC: 
 treemap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
2bedafd
Fri 21 Apr 2023 11:25:37 PM UTC: 
 treemap.c | 34 +++++++++-------------------------
 1 file changed, 9 insertions(+), 25 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:7: error: expected ‘(’ before ‘{’ token
   60 |       {
      |       ^
      |       (
Compilation failed
11757be
Fri 21 Apr 2023 11:37:56 PM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
b2718b1
